crates/neenee-code/src/tui/render/snapshots/neenee__tui__render__snapshot_tests__edit_file_distant_hunks_show_ellipsis_with_range_header.snap
---
source: crates/neenee-code/src/tui/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
  - Edit a.rs +2 -2

     1  1  line  1
     2  2  line  2
     3   - CHANGE
        3+ change
     4  4  line  4
     5  5  line  5
     6  6  line  6
      ⋮    @@ -11,6 +11,6 @@
    11 11  line 11
    12 12  line 12
    13 13  line 13
    14   - CHANGE
       14+ change
    15 15  line 15
    16 16  line 16

backgrounds:
.=reset  B=#070808  C=#111312  D=#201414  E=#402828  F=#121F16  G=#2A4030
0: .2 B76
1: .2 B76
2: .2 C76
3: .2 C76
4: .2 D9 E6 D61
5: .2 F9 G6 F61
6: .2 C76
7: .2 C76
8: .2 C76
9: .2 C76
10: .2 C76
11: .2 C76
12: .2 C76
13: .2 D9 E6 D61
14: .2 F9 G6 F61
15: .2 C76
16: .2 C76
