crates/neenee-code/src/tui/render/snapshots/neenee__tui__render__snapshot_tests__grep_expanded_renders_grouped_matches.snap
---
source: crates/neenee-cli/src/tui/render/snapshot_tests.rs
assertion_line: 268
expression: "render_grid(&m, 80, 40)"
---
  - Grep "foo" in src

    src/a.rs
    10  let foo = 1;
    22  foo();
    src/b.rs
     5  foo,

backgrounds:
.=reset  B=#070808  C=#111312
0: .2 B76
1: .2 B76
2: .2 C76
3: .2 C76
4: .2 C76
5: .2 C76
6: .2 C76
